[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luv-cli"
version = "0.0.10"
description = "Launch Claude Code agents on GitHub repos with isolated workspaces and optional Docker dev environments"
requires-python = ">=3.10"
license = "MIT"
dependencies = []
readme = "README.md"
keywords = ["claude", "cli", "github", "ai", "agent", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/exospherehost/luv"
Repository = "https://github.com/exospherehost/luv"
Issues = "https://github.com/exospherehost/luv/issues"

[tool.hatch.build.targets.wheel]
packages = ["luv"]

[project.scripts]
luv = "luv:main"
